fix bugs
简单调整路由，

update

update

修复报错问题

基本编译完成

修复问题

完成基本登陆界面

fix bug

修正部分异常

worked on iphone
