# server/service/user/schema/session.go
@@ -10,20 +10,20 @@ import (
 	"gorm.io/gorm"
 )
 
-const cacheKeySession = `user:sessions:`
-
 type Session struct {
-	Session      string        `json:"session" gorm:"type:char(40);primaryKey;comment:当前会话id"`
-	UserID       int64         `json:"user_id" gorm:"comment:用户ID(UUID)"`
-	RemoteIP     string        `json:"remote_ip" gorm:"column:remote_ip;type:cidr;comment:用户登录ip"`
-	UserAgent    string        `json:"user_agent" gorm:"column:user_agent;default:null;type:varchar(255);comment:客户端平台标识"`
-	ClientDevice string        `json:"client_device" gorm:"column:client_device;type:varchar(50);comment:客户端登录设备"`
-	DistrictId   int32         `json:"district_id" gorm:"column:district_id;type:int8;comment:登录城市id"`
-	FromUrl      string        `json:"from_url" gorm:"column:from_url;type:varchar(255);comment:登录上一跳服务"`
-	Duration     time.Duration `json:"duration" gorm:"type:int8;comment:会话有效时间"`
-	CTime        time.Time     `json:"ctime" form:"ctime" gorm:"column:ctime;autoCreateTime;comment:创建时间"`
-	UTime        time.Time     `json:"utime" form:"utime" gorm:"column:utime;autoUpdateTime;comment:更新时间"`
-	UserInfo     *User         `json:"user_info" gorm:"-"`
+	Session     string        `json:"session" gorm:"type:char(40);primaryKey;comment:当前会话id"`
+	UserID      int64         `json:"user_id" gorm:"comment:用户ID(UUID)"`
+	RemoteIP    string        `json:"remote_ip" gorm:"column:remote_ip;type:cidr;comment:用户登录ip"`
+	UserAgent   string        `json:"user_agent" gorm:"column:user_agent;default:null;type:varchar(255);comment:客户端平台标识"`
+	DeviceID    string        `json:"device_id" gorm:"column:device_id;type:varchar(50);comment:客户端登录设备"`
+	DeviceModel string        `json:"device_model" gorm:"column:device_model;type:varchar(50);comment:客户端登录设备"`
+	DeviceType  string        `json:"device_type" gorm:"column:device_type;type:varchar(50);comment:客户端登录设备类型"`
+	DistrictId  int32         `json:"district_id" gorm:"column:district_id;type:int8;comment:登录城市id"`
+	FromUrl     string        `json:"from_url" gorm:"column:from_url;type:varchar(255);comment:登录上一跳服务"`
+	Duration    time.Duration `json:"duration" gorm:"type:int8;comment:会话有效时间"`
+	CTime       time.Time     `json:"ctime" form:"ctime" gorm:"column:ctime;autoCreateTime;comment:创建时间"`
+	UTime       time.Time     `json:"utime" form:"utime" gorm:"column:utime;autoUpdateTime;comment:更新时间"`
+	UserInfo    *User         `json:"user_info" gorm:"-"`
 }
 
 func (m *Session) Clean(store *gorm.DB) {
@@ -33,6 +33,12 @@ func (m *Session) Clean(store *gorm.DB) {
 		// key := cacheKeySession + m.Session
 		// store.LRU.Remove(key)
 	}
+
+}
+
+func DeleteSessionByID(store *gorm.DB, id string) error {
+
+	return store.Exec(`DELETE FROM sessions WHERE id = ?`, id).Error
 
 }
 
@@ -50,15 +56,6 @@ func (m *Session) Save(store *gorm.DB) error {
 // parseSessionUser 获取session 关联的用户信息，
 func FirstSessionByID(store *gorm.DB, id string) (*Session, error) {
 
-	// key := cacheKeySession + id
-
-	// if raw, err := store.LRU.Get(key); err == nil {
-	// 	log.D(`hit cachekey: `, key)
-	// 	if ret, ok := raw.(*Session); ok {
-	// 		return ret, nil
-	// 	}
-
-	// }
 	//get session from db
 	ret := &Session{
 		UserInfo: &User{},
